[gd_scene load_steps=9 format=3 uid="uid://dx1vbomfio1si"]

[ext_resource type="Script" path="res://scripts/new_ui/buttons/base/dropdown_button.gd" id="1_5q1k5"]
[ext_resource type="Texture2D" uid="uid://cirwvvesqpths" path="res://assets/UI 2D/Icons/Expanded Light Customization/Light Expand/V1/LightExpand_Out_White_V1.svg" id="2_k8kk2"]
[ext_resource type="Script" path="res://scripts/new_ui/panels/base/expanding_panel.gd" id="3_2grcv"]
[ext_resource type="Script" path="res://scripts/new_ui/buttons/base/exclusive_toggle_group.gd" id="4_qephr"]
[ext_resource type="PackedScene" uid="uid://b63y0dy1jau8" path="res://scenes/new_ui/dropdown_selection_button.tscn" id="5_yktu8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_skft0"]
bg_color = Color(0.223529, 0.223529, 0.223529, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.145098, 0.145098, 0.145098, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yaq40"]
bg_color = Color(0.223529, 0.223529, 0.223529, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.145098, 0.145098, 0.145098, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Curve" id="Curve_uepu4"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[node name="custom_dropdown_button" type="Panel"]
custom_minimum_size = Vector2(200, 50)
offset_right = 200.0
offset_bottom = 50.0
theme_override_styles/panel = SubResource("StyleBoxFlat_skft0")
script = ExtResource("1_5q1k5")

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 20

[node name="selected_option_label" type="Label" parent="VBoxContainer/HBoxContainer/HBoxContainer2/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85098, 0.85098, 0.85098, 1)

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0
alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/HBoxContainer3"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 10

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer/HBoxContainer3/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="icon" type="TextureRect" parent="VBoxContainer/HBoxContainer/HBoxContainer3/MarginContainer/CenterContainer"]
self_modulate = Color(0.654902, 0.654902, 0.654902, 1)
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_k8kk2")
expand_mode = 5

[node name="VFlowContainer" type="VFlowContainer" parent="."]
custom_minimum_size = Vector2(0, 1000)
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 2.0
offset_left = -200.0
offset_right = -200.0
offset_bottom = 950.0
mouse_filter = 2

[node name="button_group" type="Node" parent="VFlowContainer"]
script = ExtResource("4_qephr")
can_toggle_off_all = false

[node name="expanding_panel" type="Panel" parent="VFlowContainer"]
clip_contents = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yaq40")
script = ExtResource("3_2grcv")
expand_direction = 0
maximized_size = 0
animation_speed = 0.35
animation_curve = SubResource("Curve_uepu4")

[node name="VBoxContainer" type="VBoxContainer" parent="VFlowContainer/expanding_panel"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Button" parent="VFlowContainer/expanding_panel/VBoxContainer" instance=ExtResource("5_yktu8")]
visible = false
layout_mode = 2

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
